# agibotx2_fiera

./: .gitignore  README.md  mail_agibot_partnership.md  package.xml  requirements.txt  setup.py
config/: demo_config.yaml  joint_limits.yaml
examples/: spy_audio.py  test_camera.py  test_hand.py  test_input_source.py  test_preset_motion.py  test_robot_mode.py  test_topics.py  test_tts.py  test_walk.py
launch/: demo_launch.py
scripts/: calibrate_hand_eye.py  record_poses.py  test_full_cycle.py  test_manipulation.py  test_navigation.py  test_perception.py  train_yolo.py
src/: main_node.py  state_machine.py
src/interaction/: chat_client.py  commentary.py  emoji_client.py  led_client.py  speech_recognizer.py  tts_client.py  voice_interaction.py
src/manipulation/: arm_controller.py  gripper_controller.py  ik_solver.py  predefined_poses.py  trajectory_planner.py
src/navigation/: approach_planner.py  locomotion_controller.py  position_tracker.py
src/perception/: box_tracker.py  camera_manager.py  pod_detector.py  pose_estimator.py  table_detector.py
src/robot_hal/: input_source_manager.py  mode_manager.py  safety_monitor.py
src/states/: base_state.py  carry_box.py  close_box.py  conversation.py  detect_pods.py  error_recovery.py  idle.py  navigate.py  pick_pod.py  place_pod.py  replace_box.py  scan_tables.py
src/utils/: config_loader.py  ros_helpers.py  transforms.py
